<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addShowDialog"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="#FFFFCBD4"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/film"
            android:src="@drawable/film_roll" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_show"
            android:textSize="20sp"
            android:gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/chooseShowRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFCBD4"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/radioFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/film"/>

        <RadioButton
            android:id="@+id/radioSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/series"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/inputShowInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/inputTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_title" />

        <TextView
            android:id="@+id/inputDirectorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_director_s_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/directorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_director_s_name" />

        <TextView
            android:id="@+id/inputYearTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_the_year_of_release"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_the_year_of_release" />

        <TextView
            android:id="@+id/inputPosterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_poster_image_from_gallery"
            android:textSize="16sp" />

        <Button
            android:id="@+id/downloadPosterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_image" />

        <TextView
            android:id="@+id/uriTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>